[Feat] Some unit tests on user services